foreach(_file cmake-help.vim cmake-indent.vim cmake-syntax.vim)
  string(REPLACE "cmake" "cmake3" new_name "${_file}")
  install(FILES ${_file} DESTINATION ${CMAKE_DATA_DIR}/editors/vim RENAME ${new_name})
endforeach(_file cmake-help.vim cmake-indent.vim cmake-syntax.vim)
install(FILES cmake-mode.el DESTINATION ${CMAKE_DATA_DIR}/editors/emacs RENAME cmake3-mode.el)
install(FILES cmake.m4 DESTINATION share/aclocal RENAME cmake3.m4)
add_subdirectory (bash-completion)
